@@ -472,19 +472,20 @@ class LaunchWindow(ed_basewin.EdBaseCtrlBox):
 
     def StartStopProcess(self):
         """Run or abort the context of the current process if possible"""
-        if self.Preferences.get('autoclear', False):
-            self._buffer.Clear()
-
-        # Check Auto-save preferences
-        if not self._busy:
-            if self.Preferences.get('autosaveall', False):
-                self.MainWindow.SaveAllBuffers()
-            elif self.Preferences.get('autosave', False):
-                self.MainWindow.SaveCurrentBuffer()
-
         # Start or stop the process
         self.SetProcessRunning(not self._busy)
         if self._busy:
+            # Check Auto-clear preference
+            if self.Preferences.get('autoclear', False):
+                self._buffer.Clear()
+
+            # Check Auto-save preferences
+            if not self._busy:
+                if self.Preferences.get('autosaveall', False):
+                    self.MainWindow.SaveAllBuffers()
+                elif self.Preferences.get('autosave', False):
+                    self.MainWindow.SaveCurrentBuffer()
+
             util.Log("[Launch][info] Starting process")
             handler = handlers.GetHandlerById(self.State['lang'])
             cmd = self.FindWindowById(ID_EXECUTABLE).GetStringSelection()
